# hdrview

./: .appveyor.yml  .clang-format  .cmake-format  .cmake-format.json  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FileSaver.js  HDRView.data  HDRView.js  HDRView.worker.js  LICENSE.txt  README.md  TODO.md  bitbucket-pipelines.yml  custom_http_server.py  index.html
.github/workflows/: ci-emscripten.yml  ci-linux.yml  ci-mac.yml  ci-pages-deploy.yml  ci-windows.yml  cmake.yml  main.yml  release.yml
assets/app_settings/apple/: Info.ios.plist  Info.macos.plist  Info.plist
assets/app_settings/emscripten/: shell.emscripten.html
assets/app_settings/linux/: HDRView.desktop
assets/shaders/: colormaps.glsl  colormaps.metal  colorspaces.glsl  colorspaces.metal  image-shader_frag.glsl  image-shader_frag.metal  image-shader_vert.glsl  image-shader_vert.metal
cmake/: CPM.cmake  DMGSetup.scpt.in  DetectArchitecture.cmake  FindOpenEXR.cmake  MunkeiVersionFromGit.cmake  VersionFromGit.cmake  bcdec_impl.cpp.in  create-appimage.cmake  generate_version.cmake  ignore-brew.cmake  linux_png_icon_to_multiple_sizes.py  osx-post-install.cmake  qoi_impl.cpp.in  sanitizers.cmake  smalldds_impl.cpp.in  stp_impl.cpp.in
cmake/modules/: FindJXL.cmake  FindLCMS2.cmake  FindLibRaw.cmake  FindLibheif.cmake  FindTurboJpeg.cmake  Findlibexif.cmake  Findlibuhdr.cmake  Findlibwebp.cmake
dev/: HDRView.data  HDRView.js  HDRView.wasm  index.html
dev/include/jxl/: jxl_export.h  jxl_threads_export.h  version.h
dev/include/libexif/: exif-utils.h
dev/include/openjph/: ojph_defs.h  ojph_mem.h  ojph_version.h
dev/lib/cmake/hwy/: hwy-config-minsizerel.cmake  hwy-config.cmake
dev/lib/cmake/openjph/: openjph-config-version.cmake  openjph-config.cmake  openjph-targets-minsizerel.cmake
dev/lib/cmake/plutovg/: plutovgConfig.cmake  plutovgConfigVersion.cmake  plutovgTargets-minsizerel.cmake  plutovgTargets.cmake
dev/lib/cmake/zlib/: zlib-config-version.cmake  zlib-config.cmake  zlibTargets.cmake
dev/lib/pkgconfig/: libbrotlicommon.pc  libbrotlidec.pc  libbrotlienc.pc  libhwy.pc  libjxl.pc  libjxl_cms.pc  libjxl_threads.pc  libsharpyuv.pc  libwebp.pc  libwebpdecoder.pc  libwebpdemux.pc  openjph.pc  zlib.pc
dev/share/WebP/cmake/: WebPConfig.cmake  WebPConfigVersion.cmake  WebPTargets-minsizerel.cmake
dev/share/pkgconfig/: zlib.pc
ext/: CMakeLists.txt
ext/PlatformFolders/: CMakeLists.txt  README.md
ext/PlatformFolders/test/: CMakeLists.txt
ext/alphanum/: alphanum.h
ext/cmake/: sanitizers.cmake
ext/filesystem/filesystem/: path.h
ext/stb/: stb_image_resize.h
ext/tinyfiles/: tinyfiles.h
include/jxl/: jxl_cms_export.h  version.h
lib/cmake/hwy/: hwy-config-version.cmake
lib/cmake/openjph/: openjph-targets.cmake
lib/cmake/plutovg/: plutovgConfigVersion.cmake  plutovgTargets.cmake
lib/cmake/zlib/: zlibTargets-minsizerel.cmake
lib/pkgconfig/: libbrotlidec.pc  libexif.pc  libhwy.pc  libjxl.pc  libwebpdecoder.pc  openjph.pc  zlib.pc
resources/: MacOSXBundleInfo.plist.in  colormaps_frag.gl  colormaps_frag.h  colorspaces_frag.gl  colorspaces_frag.h  colorspaces_gl.frag  create-dmg.sh  create-exe.bat  gamma-grid.exr  hdrimageview_frag.gl  hdrimageview_frag.metal  hdrimageview_gl.frag  hdrimageview_gl.vert  hdrimageview_metal.frag  hdrimageview_metal.vert  hdrimageview_vert.gl  hdrimageview_vert.metal  hdrview.desktop  icon.icns  icon.psd  icon.rc  sample-colormap.py  version.cmake
share/WebP/cmake/: WebPTargets.cmake
src/: Async.h  Color.cpp  Color.h  Colorspace.cpp  Colorspace.h  CommandHistory.h  Common.cpp  Common.h  DitherMatrix256.h  EditImagePanel.cpp  EditImagePanel.h  EnvMap.cpp  EnvMap.h  EnvMapConversions.cpp  EnvMapConversions.h  FilmicToneCurve.cpp  FilmicToneCurve.h  FloatImage.cpp  FloatImage.h  FullScreenDitherer.h  Fwd.h  GLImage.cpp  GLImage.h  HDRBatch.cpp  HDRImage.cpp  HDRImage.h  HDRImageIO.cpp  HDRImageViewer.cpp  HDRImageViewer.h  HDRView.cpp  HDRViewScreen.cpp  HDRViewScreen.h  HDRViewer.cpp  HDRViewer.h  HSLGradient.cpp  HSLGradient.h  HelpWindow.cpp  HelpWindow.h  ImageButton.cpp  ImageButton.h  (+191 more)
src/filters/: bilateral.cpp  box.cpp  box_blur.cpp  brightness_contrast.cpp  canvas_size.cpp  channel_mixer.cpp  colorspace.cpp  exposure.cpp  fill.cpp  filmic.cpp  filters.cpp  filters.h  flatten.cpp  free_xform.cpp  gaussian.cpp  hsl.cpp  median.cpp  remap.cpp  resize.cpp  shift.cpp  unsharp_mask.cpp  zap_gremlins.cpp
src/imageio/: cms.cpp  cms.h  dds.cpp  dds.h  exif.cpp  exif.h  exr.cpp  exr.h  exr_header.cpp  exr_header.h  exr_std_streams.h  heif.cpp  heif.h  icc.cpp  icc.h  image_loader.cpp  image_loader.h  jpg.cpp  jpg.h  jxl.cpp  jxl.h  pfm.cpp  pfm.h  png.cpp  png.h  psd.cpp  psd.h  qoi.cpp  qoi.h  raw.cpp  raw.h  stb.cpp  stb.h  tiff.cpp  tiff.h  uhdr.cpp  uhdr.h  webp.cpp  webp.h  xmp.cpp  (+1 more)
